--- a/source/syntax/_posts/2013-05-13-Emojis.md
+++ b/source/syntax/_posts/2013-05-13-Emojis.md
@@ -15,6 +15,7 @@ Emojis (emoticons) is the set of icons to express emotions. please look [cheatsh
     Hello everybody <img src="http://emojicdn.com/exclamation.png" align="absmidle" height="20" width="20" title=":exclamation:" alt=":exclamation:">
 
 **Result**
-    Hello everybody <img src="https://a248.e.akamai.net/assets.github.com/images/icons/emoji/exclamation.png" align="absmidle">
+
+Hello everybody <img src="https://a248.e.akamai.net/assets.github.com/images/icons/emoji/exclamation.png" height="20" width="20" align="absmidle">
 
 <div class="alert alert-warning">Right now there is not Emoji CDN to serve icons to ayyone, but we are now discussing this posibility. Untill that, this features is questionalbe.</div>
