--- a/source/syntax/_posts/2013-05-13-Emojis.md
+++ b/source/syntax/_posts/2013-05-13-Emojis.md
@@ -4,7 +4,7 @@ title:  "Emojis"
 date:   2013-01-01 00:00:54
 ---
 
-Emojis (emoticons) is the set of icons to express emotions. please look [cheatshit](http://www.emoji-cheat-sheet.com/) here.
+Emojis (emoticons) is the set of icons to express emotions. please look [cheatsheet](http://www.emoji-cheat-sheet.com/) here.
 
 **Markdown**
 
